--- a/rbx1/rbx1_nav/config/fake/base_local_planner_params.yaml
+++ b/rbx1/rbx1_nav/config/fake/base_local_planner_params.yaml
@@ -24,4 +24,20 @@ TrajectoryPlannerROS:
    goal_distance_bias: 0.8 # The weighting for how much the controller should attempt to reach its local goal, also controls speed
    meter_scoring: true # Whether the gdist_scale and pdist_scale parameters should assume that goal_distance and path_distance are expressed in units of meters or cells.
 
-   
+   heading_lookahead: 0.325 # How far to look ahead in meters when scoring different in-place-rotation trajectories
+   heading_scoring: false # Whether to score based on the robot's heading to the path or its distance from the path
+   heading_scoring_timestep: 0.8 # How far to look ahead in time in seconds along the simulated trajectory when using heading scoring~<name>/dwa (bool, default: true)
+   occdist_scale: 0.05 # The weighting for how much the controller should attempt to avoid obstacles
+   oscillation_reset_dist: 0.05 # How far the robot must travel in meters before oscillation flags are reset
+   publish_cost_grid_pc: false # When true, a sensor_msgs/PointCloud2 will be available on the ~<name>/cost_cloud topic. Each point cloud represents the cost grid and has a field for each individual scoring function component as well as the overall cost for each cell, taking the scoring parameters into account.
+   prune_plan: true # Defines whether or not to eat up the plan as the robot moves along the path. If set to true, points will fall off the end of the plan once the robot moves 1 meter past them
+
+   sim_time: 1.0 # The amount of time to forward-simulate trajectories in seconds
+   sim_granularity: 0.05 # The step size, in meters, to take between points on a given trajectory
+   angular_sim_granularity: 0.1 # The step size, in radians, to take between angular samples on a given trajectory
+   vx_samples: 8 # The number of samples to use when exploring the x velocity space
+   vy_samples: 0 # zero for a differential drive robot
+   vtheta_samples: 20 # The number of samples to use when exploring the theta velocity space
+   dwa: true # Whether to use the Dynamic Window Approach (DWA)_ or whether to use Trajectory Rollout
+   simple_attractor: false
+
